<resources>
    <string name="app_name">Sugestor de Curso</string>
    <string name="CPF">CPF</string>
    <string name="Senha">Senha</string>
    <string name="BotaoLogin">Continuar</string>
    <string name="BotaoCadastro">Cadastrar</string>
    <string name="Cadastro">Não possui cadastro?</string>
    <string name="BotaoCadastroTelaMain">Cadastre-se</string>
    <string name="NomeCompleto">Nome Completo</string>
    <string name="Telefone">Telefone</string>
    <string name="Email">E-mail</string>
    <string name="DataN">Data de Nascimento (YYYY-MM-DD)</string>
    <string name="ExplicaInfos">Preencha as seguintes informações em relação a suas notas para realizarmos sua predição</string>
    <string name="NotaMat">Matemática</string>
    <string name="NotaPort">Português</string>
    <string name="NotaRed">Redação</string>
    <string name="NotaLit">Literatura</string>
    <string name="NotaQuim">Química</string>
    <string name="NotaBio">Biologia</string>
    <string name="NotaFis">Física</string>
    <string name="NotaGeo">Geografia</string>
    <string name="NotaHist">História</string>
    <string name="NotaSocio">Sociologia</string>
    <string name="NotaFilo">Filosofia</string>
    <string name="NotaArte">Artes</string>
    <string name="Notas">Notas</string>
    <string name="Historico">Histórico de sugestões</string>
    <string name="Dados">Dados pessoais</string>
    <string name="Configuracoes">Configurações</string>
    <string name="BotaoSalvar">Salvar</string>
    <string name="AlterarDadosPessoais">Alterar dados pessoais</string>
    <string name="AlterarNotas">Alterar notas</string>
    <string name="ConfigGeraisDoApp">Configurações gerais do aplicativo</string>
    <string name="AnaliseHistorico">Analise seu histórico de sugestões de curso</string>
    <string name="AtualizarNotas">Atualizar Dados de Notas</string>
    <string name="NomeSocial">Nome Social</string>
    <string name="descricao_imagem_usuario">Imagem do Usuario</string>
    <string name="titulo_aluno">Aluno de xxxxx xxxx xxxxxxxxxxx</string>
    <string name="icone_notas">Icone_notas</string>
    <string name="icone_dados">Icone_dados</string>
    <string name="sugestoes_de_cursos">Sugestões de Cursos</string>
    <string name="historico_de_sugestoes">Histórico de Sugestões</string>
    <string name="atualizar_dados_de_notas">Atualizar Dados de Notas</string>
    <string name="atualizar_dados">Atualizar Dados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="area_de_preferencia">Área de Preferência</string>
    <string name="descricao_voltar">Voltar para a tela anterior</string>
    <string name="titulo_historico">Histórico de Sugestões</string>
    <string name="curso_historico">Curso sugerido</string>
    <string name="data_historico">Data</string>
    <string name="materia_historico">Baseado nas disciplinas</string>

</resources>