<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary"
    android:padding="24dp"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CampoCPF"
        android:layout_width="match_parent"
        app:hintTextColor="@color/black"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CPF"
            android:textColorHint="@color/black"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CampoSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"

        android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userSenha"
            android:layout_width="match_parent"
            android:textColorHint="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/Senha"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/BotaoLogin"
        android:textColor="@color/black"
        android:onClick="onClickLogin"
        style="@style/Widget.Custom.RoundedButton"/>

    <TextView
        android:id="@+id/NCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/Cadastro"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtCadastro"
        android:text="@string/BotaoCadastroTelaMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        style="@style/Widget.Material3.Button.TextButton"
        android:textColor="@color/black"
        android:onClick="goRegister"
        />


</LinearLayout>