<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="24dp"
        >

        <TextView
            android:id="@+id/infos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ExplicaInfos"
            android:layout_marginBottom="30dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaMat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaMat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaMat"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaPort"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            app:hintTextColor="@color/black"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaPort"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaRed"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            app:hintTextColor="@color/black"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaRed"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaLit"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            app:hintTextColor="@color/black"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaLit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaLit"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaQuim"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            app:hintTextColor="@color/black"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaQuim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaQuim"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaFis"
            android:layout_width="match_parent"
            app:hintTextColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaFis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaFis"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaBio"
            android:layout_width="match_parent"
            app:hintTextColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaBio"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaGeo"
            android:layout_width="match_parent"
            app:hintTextColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaGeo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaGeo"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaHist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaHist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaHist"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaFilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaFilo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaFilo"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaSocio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/black"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaSocio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaSocio"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CampoNotaArte"
            android:layout_width="match_parent"
            app:hintTextColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NotaArte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NotaArte"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/Pref"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:spinnerMode="dropdown" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/BotaoCadastro"
            android:textColor="@color/black"
            android:onClick="onClickRegister2"
            style="@style/Widget.Custom.RoundedButton"/>



    </LinearLayout>
</ScrollView>