<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.profile.ProfileGradeData"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/infos"
                android:layout_width="wrap_content"
                android:paddingBottom="24dp"
                android:layout_height="wrap_content"
                android:text="@string/atualizar_dados_de_notas"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaMat"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaMat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaMat"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaPort"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaPort"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaRed"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaRed"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaLit"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaLit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaLit"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaQuim"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaQuim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaQuim"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaFis"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaFis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaFis"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaBio"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaBio"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaGeo"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaGeo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaGeo"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaHist"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaHist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaHist"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaFilo"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaFilo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaFilo"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaSocio"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaSocio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaSocio"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CampoNotaArte"
                style="@style/MyCustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NotaArte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NotaArte"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/BtSalvar"
                style="@style/Widget.Custom.RoundedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:onClick="onClickUpdateGrade"
                android:text="@string/BotaoSalvar"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btn_voltar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/descricao_voltar"
        android:src="@drawable/seta_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>